--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link href="./resources/css/style1.css" rel="stylesheet" type="text/css">
+	<link href="./resources/css/style.css" rel="stylesheet" type="text/css">
 	<title>The Tea Cozy</title>
 </head>
 <body>
